# proxmox-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/proxmox_mcp/: __init__.py  __main__.py  client.py  config.py  safety.py  server.py  ssh.py
src/proxmox_mcp/tools/: __init__.py  exec.py  lifecycle.py  provision.py  read.py
tests/: test_client.py  test_config.py  test_config_ssh.py  test_exec_tools.py  test_lifecycle_tools.py  test_no_delete_guard.py  test_provision_tools.py  test_read_tools.py  test_server.py  test_server_exec.py  test_ssh.py
