[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proxmox-mcp"
version = "0.1.0"
description = "MCP server for Proxmox VE"
requires-python = ">=3.11"
dependencies = [
    "proxmoxer>=2.3.0",
    "requests",
    "mcp>=1.28.0",
    "paramiko>=3.0.0",
]

[project.scripts]
proxmox-mcp = "proxmox_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
